Persist quizzes with H2 database